Stages/Grammar/obj/Release/CdeltaParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from E:\Documents\Studium\Cdelta\Stages\Grammar\CdeltaParser.g4 by ANTLR 4.6.4

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Cdelta.Analyser.Generated {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.4")]
[System.CLSCompliant(false)]
public partial class CdeltaParser : Parser {
	public const int
		AUTOMATON=1, STATE=2, TRANSITION=3, START=4, END=5, ENTRY=6, EXIT=7, CONDITION=8, 
		SEMICOLON=9, CURLY_OPEN=10, CURLY_CLOSE=11, LESS_THAN=12, GREATER_THAN=13, 
		PUBLIC=14, INTERNAL=15, PROTECTED=16, PRIVATE=17, WHITESPACES=18, IDENTIFIER=19, 
		SINGLE_LINE_COMMENT=20, DELIMITED_COMMENT=21;
	public const int
		RULE_codeFile = 0, RULE_preAutomatonCode = 1, RULE_postAutomatonCode = 2, 
		RULE_automatonDefinition = 3, RULE_accessModifier = 4, RULE_automatonDataType = 5, 
		RULE_automatonBody = 6, RULE_stateDefinition = 7, RULE_stateInnerBlock = 8, 
		RULE_stateEntry = 9, RULE_stateExit = 10, RULE_transitionDefinition = 11, 
		RULE_transitionInnerBlock = 12, RULE_transitionCondition = 13, RULE_transitionEntry = 14, 
		RULE_undefined = 15;
	public static readonly string[] ruleNames = {
		"codeFile", "preAutomatonCode", "postAutomatonCode", "automatonDefinition", 
		"accessModifier", "automatonDataType", "automatonBody", "stateDefinition", 
		"stateInnerBlock", "stateEntry", "stateExit", "transitionDefinition", 
		"transitionInnerBlock", "transitionCondition", "transitionEntry", "undefined"
	};

	private static readonly string[] _LiteralNames = {
		null, "'automaton'", "'state'", "'transition'", "'start'", "'end'", "'entry'", 
		"'exit'", "'condition'", "';'", "'{'", "'}'", "'<'", "'>'", "'public'", 
		"'internal'", "'protected'", "'private'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "AUTOMATON", "STATE", "TRANSITION", "START", "END", "ENTRY", "EXIT", 
		"CONDITION", "SEMICOLON", "CURLY_OPEN", "CURLY_CLOSE", "LESS_THAN", "GREATER_THAN", 
		"PUBLIC", "INTERNAL", "PROTECTED", "PRIVATE", "WHITESPACES", "IDENTIFIER", 
		"SINGLE_LINE_COMMENT", "DELIMITED_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "CdeltaParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public CdeltaParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class CodeFileContext : ParserRuleContext {
		public PreAutomatonCodeContext preAutomatonCode() {
			return GetRuleContext<PreAutomatonCodeContext>(0);
		}
		public AutomatonDefinitionContext automatonDefinition() {
			return GetRuleContext<AutomatonDefinitionContext>(0);
		}
		public PostAutomatonCodeContext postAutomatonCode() {
			return GetRuleContext<PostAutomatonCodeContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(CdeltaParser.Eof, 0); }
		public CodeFileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_codeFile; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICdeltaParserListener typedListener = listener as ICdeltaParserListener;
			if (typedListener != null) typedListener.EnterCodeFile(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICdeltaParserListener typedListener = listener as ICdeltaParserListener;
			if (typedListener != null) typedListener.ExitCodeFile(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICdeltaParserVisitor<TResult> typedVisitor = visitor as ICdeltaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCodeFile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CodeFileContext codeFile() {
		CodeFileContext _localctx = new CodeFileContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_codeFile);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 32; preAutomatonCode();
			State = 33; automatonDefinition();
			State = 34; postAutomatonCode();
			State = 35; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PreAutomatonCodeContext : ParserRuleContext {
		public UndefinedContext undefined() {
			return GetRuleContext<UndefinedContext>(0);
		}
		public PreAutomatonCodeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_preAutomatonCode; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICdeltaParserListener typedListener = listener as ICdeltaParserListener;
			if (typedListener != null) typedListener.EnterPreAutomatonCode(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICdeltaParserListener typedListener = listener as ICdeltaParserListener;
			if (typedListener != null) typedListener.ExitPreAutomatonCode(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICdeltaParserVisitor<TResult> typedVisitor = visitor as ICdeltaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPreAutomatonCode(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PreAutomatonCodeContext preAutomatonCode() {
		PreAutomatonCodeContext _localctx = new PreAutomatonCodeContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_preAutomatonCode);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 37; undefined();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PostAutomatonCodeContext : ParserRuleContext {
		public UndefinedContext undefined() {
			return GetRuleContext<UndefinedContext>(0);
		}
		public PostAutomatonCodeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_postAutomatonCode; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICdeltaParserListener typedListener = listener as ICdeltaParserListener;
			if (typedListener != null) typedListener.EnterPostAutomatonCode(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICdeltaParserListener typedListener = listener as ICdeltaParserListener;
			if (typedListener != null) typedListener.ExitPostAutomatonCode(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICdeltaParserVisitor<TResult> typedVisitor = visitor as ICdeltaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPostAutomatonCode(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PostAutomatonCodeContext postAutomatonCode() {
		PostAutomatonCodeContext _localctx = new PostAutomatonCodeContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_postAutomatonCode);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 39; undefined();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AutomatonDefinitionContext : ParserRuleContext {
		public ITerminalNode AUTOMATON() { return GetToken(CdeltaParser.AUTOMATON, 0); }
		public ITerminalNode IDENTIFIER() { return GetToken(CdeltaParser.IDENTIFIER, 0); }
		public ITerminalNode CURLY_OPEN() { return GetToken(CdeltaParser.CURLY_OPEN, 0); }
		public AutomatonBodyContext automatonBody() {
			return GetRuleContext<AutomatonBodyContext>(0);
		}
		public ITerminalNode CURLY_CLOSE() { return GetToken(CdeltaParser.CURLY_CLOSE, 0); }
		public AccessModifierContext accessModifier() {
			return GetRuleContext<AccessModifierContext>(0);
		}
		public ITerminalNode LESS_THAN() { return GetToken(CdeltaParser.LESS_THAN, 0); }
		public AutomatonDataTypeContext automatonDataType() {
			return GetRuleContext<AutomatonDataTypeContext>(0);
		}
		public ITerminalNode GREATER_THAN() { return GetToken(CdeltaParser.GREATER_THAN, 0); }
		public AutomatonDefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_automatonDefinition; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICdeltaParserListener typedListener = listener as ICdeltaParserListener;
			if (typedListener != null) typedListener.EnterAutomatonDefinition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICdeltaParserListener typedListener = listener as ICdeltaParserListener;
			if (typedListener != null) typedListener.ExitAutomatonDefinition(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICdeltaParserVisitor<TResult> typedVisitor = visitor as ICdeltaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAutomatonDefinition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AutomatonDefinitionContext automatonDefinition() {
		AutomatonDefinitionContext _localctx = new AutomatonDefinitionContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_automatonDefinition);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 42;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PUBLIC) | (1L << INTERNAL) | (1L << PROTECTED) | (1L << PRIVATE))) != 0)) {
				{
				State = 41; accessModifier();
				}
			}

			State = 44; Match(AUTOMATON);
			State = 49;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==LESS_THAN) {
				{
				State = 45; Match(LESS_THAN);
				State = 46; automatonDataType();
				State = 47; Match(GREATER_THAN);
				}
			}

			State = 51; Match(IDENTIFIER);
			State = 52; Match(CURLY_OPEN);
			State = 53; automatonBody();
			State = 54; Match(CURLY_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AccessModifierContext : ParserRuleContext {
		public ITerminalNode PROTECTED() { return GetToken(CdeltaParser.PROTECTED, 0); }
		public ITerminalNode INTERNAL() { return GetToken(CdeltaParser.INTERNAL, 0); }
		public ITerminalNode PRIVATE() { return GetToken(CdeltaParser.PRIVATE, 0); }
		public ITerminalNode PUBLIC() { return GetToken(CdeltaParser.PUBLIC, 0); }
		public AccessModifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_accessModifier; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICdeltaParserListener typedListener = listener as ICdeltaParserListener;
			if (typedListener != null) typedListener.EnterAccessModifier(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICdeltaParserListener typedListener = listener as ICdeltaParserListener;
			if (typedListener != null) typedListener.ExitAccessModifier(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICdeltaParserVisitor<TResult> typedVisitor = visitor as ICdeltaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAccessModifier(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AccessModifierContext accessModifier() {
		AccessModifierContext _localctx = new AccessModifierContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_accessModifier);
		try {
			State = 64;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,2,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 56; Match(PROTECTED);
				State = 57; Match(INTERNAL);
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 58; Match(PRIVATE);
				State = 59; Match(PROTECTED);
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 60; Match(PUBLIC);
				}
				break;

			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 61; Match(INTERNAL);
				}
				break;

			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 62; Match(PROTECTED);
				}
				break;

			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 63; Match(PRIVATE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AutomatonDataTypeContext : ParserRuleContext {
		public ITerminalNode[] GREATER_THAN() { return GetTokens(CdeltaParser.GREATER_THAN); }
		public ITerminalNode GREATER_THAN(int i) {
			return GetToken(CdeltaParser.GREATER_THAN, i);
		}
		public AutomatonDataTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_automatonDataType; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICdeltaParserListener typedListener = listener as ICdeltaParserListener;
			if (typedListener != null) typedListener.EnterAutomatonDataType(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICdeltaParserListener typedListener = listener as ICdeltaParserListener;
			if (typedListener != null) typedListener.ExitAutomatonDataType(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICdeltaParserVisitor<TResult> typedVisitor = visitor as ICdeltaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAutomatonDataType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AutomatonDataTypeContext automatonDataType() {
		AutomatonDataTypeContext _localctx = new AutomatonDataTypeContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_automatonDataType);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 67;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				{
				State = 66;
				_la = _input.La(1);
				if ( _la <= 0 || (_la==GREATER_THAN) ) {
				_errHandler.RecoverInline(this);
				} else {
					if (_input.La(1) == TokenConstants.Eof) {
						matchedEOF = true;
					}

					_errHandler.ReportMatch(this);
					Consume();
				}
				}
				}
				State = 69;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AUTOMATON) | (1L << STATE) | (1L << TRANSITION) | (1L << START) | (1L << END) | (1L << ENTRY) | (1L << EXIT) | (1L << CONDITION) | (1L << SEMICOLON) | (1L << CURLY_OPEN) | (1L << CURLY_CLOSE) | (1L << LESS_THAN) | (1L << PUBLIC) | (1L << INTERNAL) | (1L << PROTECTED) | (1L << PRIVATE) | (1L << WHITESPACES) | (1L << IDENTIFIER) | (1L << SINGLE_LINE_COMMENT) | (1L << DELIMITED_COMMENT))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AutomatonBodyContext : ParserRuleContext {
		public StateDefinitionContext[] stateDefinition() {
			return GetRuleContexts<StateDefinitionContext>();
		}
		public StateDefinitionContext stateDefinition(int i) {
			return GetRuleContext<StateDefinitionContext>(i);
		}
		public TransitionDefinitionContext[] transitionDefinition() {
			return GetRuleContexts<TransitionDefinitionContext>();
		}
		public TransitionDefinitionContext transitionDefinition(int i) {
			return GetRuleContext<TransitionDefinitionContext>(i);
		}
		public AutomatonBodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_automatonBody; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICdeltaParserListener typedListener = listener as ICdeltaParserListener;
			if (typedListener != null) typedListener.EnterAutomatonBody(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICdeltaParserListener typedListener = listener as ICdeltaParserListener;
			if (typedListener != null) typedListener.ExitAutomatonBody(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICdeltaParserVisitor<TResult> typedVisitor = visitor as ICdeltaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAutomatonBody(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AutomatonBodyContext automatonBody() {
		AutomatonBodyContext _localctx = new AutomatonBodyContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_automatonBody);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 75;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STATE) | (1L << TRANSITION) | (1L << START) | (1L << END))) != 0)) {
				{
				State = 73;
				_errHandler.Sync(this);
				switch (_input.La(1)) {
				case STATE:
				case START:
				case END:
					{
					State = 71; stateDefinition();
					}
					break;
				case TRANSITION:
					{
					State = 72; transitionDefinition();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 77;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StateDefinitionContext : ParserRuleContext {
		public ITerminalNode STATE() { return GetToken(CdeltaParser.STATE, 0); }
		public ITerminalNode IDENTIFIER() { return GetToken(CdeltaParser.IDENTIFIER, 0); }
		public ITerminalNode SEMICOLON() { return GetToken(CdeltaParser.SEMICOLON, 0); }
		public ITerminalNode START() { return GetToken(CdeltaParser.START, 0); }
		public ITerminalNode END() { return GetToken(CdeltaParser.END, 0); }
		public ITerminalNode CURLY_OPEN() { return GetToken(CdeltaParser.CURLY_OPEN, 0); }
		public StateInnerBlockContext stateInnerBlock() {
			return GetRuleContext<StateInnerBlockContext>(0);
		}
		public ITerminalNode CURLY_CLOSE() { return GetToken(CdeltaParser.CURLY_CLOSE, 0); }
		public StateDefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stateDefinition; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICdeltaParserListener typedListener = listener as ICdeltaParserListener;
			if (typedListener != null) typedListener.EnterStateDefinition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICdeltaParserListener typedListener = listener as ICdeltaParserListener;
			if (typedListener != null) typedListener.ExitStateDefinition(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICdeltaParserVisitor<TResult> typedVisitor = visitor as ICdeltaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStateDefinition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StateDefinitionContext stateDefinition() {
		StateDefinitionContext _localctx = new StateDefinitionContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_stateDefinition);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 79;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==START) {
				{
				State = 78; Match(START);
				}
			}

			State = 82;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==END) {
				{
				State = 81; Match(END);
				}
			}

			State = 84; Match(STATE);
			State = 85; Match(IDENTIFIER);
			State = 91;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case SEMICOLON:
				{
				State = 86; Match(SEMICOLON);
				}
				break;
			case CURLY_OPEN:
				{
				{
				State = 87; Match(CURLY_OPEN);
				State = 88; stateInnerBlock();
				State = 89; Match(CURLY_CLOSE);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StateInnerBlockContext : ParserRuleContext {
		public StateEntryContext stateEntry() {
			return GetRuleContext<StateEntryContext>(0);
		}
		public StateExitContext stateExit() {
			return GetRuleContext<StateExitContext>(0);
		}
		public StateInnerBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stateInnerBlock; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICdeltaParserListener typedListener = listener as ICdeltaParserListener;
			if (typedListener != null) typedListener.EnterStateInnerBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICdeltaParserListener typedListener = listener as ICdeltaParserListener;
			if (typedListener != null) typedListener.ExitStateInnerBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICdeltaParserVisitor<TResult> typedVisitor = visitor as ICdeltaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStateInnerBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StateInnerBlockContext stateInnerBlock() {
		StateInnerBlockContext _localctx = new StateInnerBlockContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_stateInnerBlock);
		int _la;
		try {
			State = 105;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,13,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 94;
				_errHandler.Sync(this);
				_la = _input.La(1);
				if (_la==ENTRY) {
					{
					State = 93; stateEntry();
					}
				}

				State = 97;
				_errHandler.Sync(this);
				_la = _input.La(1);
				if (_la==EXIT) {
					{
					State = 96; stateExit();
					}
				}

				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 100;
				_errHandler.Sync(this);
				_la = _input.La(1);
				if (_la==EXIT) {
					{
					State = 99; stateExit();
					}
				}

				State = 103;
				_errHandler.Sync(this);
				_la = _input.La(1);
				if (_la==ENTRY) {
					{
					State = 102; stateEntry();
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StateEntryContext : ParserRuleContext {
		public ITerminalNode ENTRY() { return GetToken(CdeltaParser.ENTRY, 0); }
		public ITerminalNode CURLY_OPEN() { return GetToken(CdeltaParser.CURLY_OPEN, 0); }
		public UndefinedContext undefined() {
			return GetRuleContext<UndefinedContext>(0);
		}
		public ITerminalNode CURLY_CLOSE() { return GetToken(CdeltaParser.CURLY_CLOSE, 0); }
		public StateEntryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stateEntry; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICdeltaParserListener typedListener = listener as ICdeltaParserListener;
			if (typedListener != null) typedListener.EnterStateEntry(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICdeltaParserListener typedListener = listener as ICdeltaParserListener;
			if (typedListener != null) typedListener.ExitStateEntry(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICdeltaParserVisitor<TResult> typedVisitor = visitor as ICdeltaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStateEntry(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StateEntryContext stateEntry() {
		StateEntryContext _localctx = new StateEntryContext(_ctx, State);
		EnterRule(_localctx, 18, RULE_stateEntry);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 107; Match(ENTRY);
			State = 108; Match(CURLY_OPEN);
			State = 109; undefined();
			State = 110; Match(CURLY_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StateExitContext : ParserRuleContext {
		public ITerminalNode EXIT() { return GetToken(CdeltaParser.EXIT, 0); }
		public ITerminalNode CURLY_OPEN() { return GetToken(CdeltaParser.CURLY_OPEN, 0); }
		public UndefinedContext undefined() {
			return GetRuleContext<UndefinedContext>(0);
		}
		public ITerminalNode CURLY_CLOSE() { return GetToken(CdeltaParser.CURLY_CLOSE, 0); }
		public StateExitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stateExit; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICdeltaParserListener typedListener = listener as ICdeltaParserListener;
			if (typedListener != null) typedListener.EnterStateExit(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICdeltaParserListener typedListener = listener as ICdeltaParserListener;
			if (typedListener != null) typedListener.ExitStateExit(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICdeltaParserVisitor<TResult> typedVisitor = visitor as ICdeltaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStateExit(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StateExitContext stateExit() {
		StateExitContext _localctx = new StateExitContext(_ctx, State);
		EnterRule(_localctx, 20, RULE_stateExit);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 112; Match(EXIT);
			State = 113; Match(CURLY_OPEN);
			State = 114; undefined();
			State = 115; Match(CURLY_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
